@@ -8,6 +8,7 @@ Changes in progress
 - Role names translated in import-users-with-csv (Trello #625)
 - Forbidden access to admin-tools and edit-comments for Collaborator user roles (Trello #790)
 - Don't allow admins to modify WordPress URL on wp-admin/options-general.php (Trello #797)
+- Added disk quota control (Trello #733)
 
 
 
